# iit-concert-ros-pkg

./: .gitmodules  CMakeLists.txt  README.md  clean_generated_files.sh
concert_cartesio/: CMakeLists.txt  package.xml
concert_config/: CMakeLists.txt  bashrc-setup-container.sh  modular.yaml  package.xml  setup.sh
concert_config/gui/ros2/: concert_launcher_config.yaml  gui_server_config.yaml
concert_config/src/: robot_description_publisher.cpp
concert_examples/: CMakeLists.txt
concert_gazebo/launch/: concert.launch  modular.launch.py  modular.launch.xml
