cmake_minimum_required(VERSION 3.0)

set(ROBOT_NAME concert)
project(iit-concert-ros-pkg VERSION 1.0.0)


## add sub-packages
add_subdirectory(concert_urdf)
add_subdirectory(concert_srdf)
add_subdirectory(concert_gazebo)
add_subdirectory(concert_config)
add_subdirectory(concert_cartesio_config)
add_subdirectory(concert_demo)

enable_testing()
