<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>concert_config</name>
  <version>1.0.0</version>
  <description>XBot2 configuration for Concert robot simulation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>concert_urdf</exec_depend>
  <exec_depend>concert_srdf</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
